--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ script: ./scripts/release-build.sh
 after_success:
   - if [ "${TRAVIS_BRANCH}" == "master" ]; then
     docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}";
-    source ./script/init.sh ;
+    source ./scripts/init.sh ;
     docker::copy_tag_and_push flogo/flogo-contrib pdhar/flogo-contrib;
     fi
