Add .build-cache artifact folder for travis Update script for build cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 sudo: required
 services:
   - docker
+cache:
+  bundler: true
+  directories:
+  - .cache          # images.txt
 script: ./scripts/release-build.sh
 after_success:
   - if [ "${TRAVIS_BRANCH}" == "master" ]; then
