fix travis path

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   bundler: true
   directories:
   - .cache          # images.txt
-script: ./scripts/release-build.sh
+script: ./release-build.sh
 after_success:
   - if [ "${TRAVIS_BRANCH}" == "master" ]; then
     docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}";
