--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script: ./release-build.sh
 after_success:
   - if [ "${TRAVIS_BRANCH}" == "master" ]; then
     docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}";
-    source ./scripts/init.sh ;
+    source ./submodules/flogo-cicd/scripts/init.sh ;
     docker::copy_tag_and_push flogo/flogo-contrib pdhar/flogo-contrib;
     fi
