--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ cache:
 # Handle git submodules yourself
 git:
     submodules: false
-    
+
+# Do a github login using token
 before_install:
   - "echo -e \"machine github.com\n  login ci-user\n  password ${GITHUB_USER_TOKEN}\" >> ${HOME}/.netrc"
 
@@ -18,8 +19,8 @@ after_script:
   - "[ -f \"${HOME}/.netrc\" ] && rm -f ${HOME}/.netrc"
 
 after_success:
-  - if [ "${TRAVIS_BRANCH}" == "master" ]; then
-    docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}";
+  - "if [ \"${TRAVIS_BRANCH}\" == \"master\" ]; then
+    docker login -u=\"${DOCKER_USERNAME}\" -p=\"${DOCKER_PASSWORD}\";
     source ./submodules/flogo-cicd/scripts/init.sh ;
     docker::copy_tag_and_push flogo/flogo-contrib pdhar/flogo-contrib;
-    fi
+    fi"
