--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ after_success:
   - "if [ \"${TRAVIS_BRANCH}\" == \"master\" ]; then
     docker login -u=\"${DOCKER_USERNAME}\" -p=\"${DOCKER_PASSWORD}\";
     source ./submodules/flogo-cicd/scripts/init.sh ;
-    docker::copy_tag_and_push flogo/flogo-contrib pdhar/flogo-contrib;
+    # docker::copy_tag_and_push flogo/flogo-contrib pdhar/flogo-contrib;
     fi"
