Avoid multiple git clone for module build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ git:
 before_install:
   - "echo -e \"machine github.com\n  login ci-user\n  password ${GITHUB_USER_TOKEN}\" >> ${HOME}/.netrc"
 script: 
-  - find .
-  - rm -rf *
+  - tar cvfz flogo-contrib.tgz .
+  - find . -not -name "flogo-contrib.tgz" -not  -name "\." -not -name "\.\."  -print0 | xargs -0 rm -rf --
   - git clone https://github.com/TIBCOSoftware/flogo-cicd.git flogo-cicd
   - pushd flogo-cicd/docker/flogo-contrib
   - ./build-flogo-contrib.sh
