Travis: git clone cicd based on branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,14 @@ script:
   - touch flogo-contrib.tgz 
   - tar cvfz flogo-contrib.tgz --exclude=flogo-contrib.tgz .
   - find . -not -name "flogo-contrib.tgz" -not  -name "\." -not -name "\.\."  -print0 | xargs -0 rm -rf --
-  - git clone https://github.com/TIBCOSoftware/flogo-cicd.git flogo-cicd
+  - "git ls-remote --exit-code https://github.com/TIBCOSoftware/flogo-cicd.git ${TRAVIS_BRANCH} ;
+    if [ $? -eq 0 ]; then 
+        echo \"Branch ${TRAVIS_BRANCH} found on flogo-cicd\" ;
+        git clone https://github.com/TIBCOSoftware/flogo-cicd.git --branch ${TRAVIS_BRANCH} --single-branch flogo-cicd ;
+    else 
+        echo \"Branch ${TRAVIS_BRANCH} not found on flogo-cicd using master\" ;
+        git clone https://github.com/TIBCOSoftware/flogo-cicd.git flogo-cicd ;
+    fi"
   - pushd flogo-cicd/docker/flogo-contrib
   - ./build-flogo-contrib.sh
   - popd
