Travis: Change postbuild init.sh path

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ after_script:
 after_success:
   - "if [ \"${TRAVIS_BRANCH}\" == \"master\" ]; then
     docker login -u=\"${DOCKER_USERNAME}\" -p=\"${DOCKER_PASSWORD}\";
-    source ${TRAVIS_BUILD_DIR}/scripts/init.sh ;
+    source ${TRAVIS_BUILD_DIR}/flogo-cicd/scripts/init.sh ;
     flogo::module::postbuild flogo-contrib ;
     fi"
