--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -98,9 +98,9 @@
   version = "1.3.1"
 
 [[constraint]]
-  branch = "=master"
+  branch = "master"
   name = "github.com/mongodb/mongo-go-driver/mongo"
 
 [[constraint]]
-  branch = "=master"
+  branch = "master"
   name = "github.com/mongodb/mongo-go-driver/bson"
